[project]
name = "doom"
version = "0.1.0"
description = "Certificate Template Viewer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "certipy-ad>=4.8.2",
    "ldap3",
    "textual>=6.0.0",
    "textual-dev>=1.7.0",
]

[tool.uv.sources]
ldap3 = { git = "https://github.com/cannatag/ldap3.git", rev = "dev" }
