[project]
name = "doom"
version = "0.1.1"
description = "Certificate Template Viewer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asn1crypto>=1.5.1",
    "asyncio>=4.0.0",
    "ldap3 @ git+https://github.com/cannatag/ldap3.git@dev",
    "textual>=6.0.0",
    "textual-dev>=1.7.0",
]

[tool.uv.sources]
ldap3 = { git = "https://github.com/cannatag/ldap3.git", rev = "dev" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
doom = "doom.__main__:run"

[tool.setuptools.packages]
find = { where = ["src"] }
